--- a/public/login.html
+++ b/public/login.html
@@ -7,29 +7,60 @@
     <meta name="theme-color" content="#07c160">
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📁</text></svg>">
     <style>
-        * {
+        :root {
+            --color-primary: #07c160;
+            --color-primary-hover: #06ad56;
+            --color-primary-light: rgba(7, 193, 96, 0.1);
+            --color-danger: #fa5151;
+            --color-warning: #faad14;
+            --color-text: #1a1a1a;
+            --color-text-secondary: #666;
+            --color-text-muted: #999;
+            --color-bg-white: #fff;
+            --color-bg-card: #f7f7f7;
+            --color-border: #e6e6e6;
+            --radius-md: 10px;
+            --radius-lg: 16px;
+            --transition-fast: 0.15s ease;
+            --font-stack: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'PingFang SC', 'Microsoft YaHei', sans-serif;
+        }
+
+        *, *::before, *::after {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: var(--font-stack);
+            background: linear-gradient(135deg, #07c160 0%, #06ad56 50%, #059a4a 100%);
             min-height: 100vh;
+            min-height: 100dvh;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 20px;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        :focus-visible {
+            outline: 2px solid var(--color-primary);
+            outline-offset: 2px;
         }
 
         .login-container {
-            background: white;
+            background: var(--color-bg-white);
             border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
             width: 100%;
             max-width: 400px;
             padding: 40px;
+            animation: cardSlideUp 0.4s ease-out;
+        }
+
+        @keyframes cardSlideUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .login-header {
@@ -38,20 +69,27 @@
         }
 
         .login-icon {
-            font-size: 64px;
-            margin-bottom: 16px;
+            width: 64px;
+            height: 64px;
+            background: var(--color-primary-light);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 16px;
+            font-size: 32px;
         }
 
         .login-title {
-            font-size: 24px;
+            font-size: 22px;
             font-weight: 600;
-            color: #333;
-            margin-bottom: 8px;
+            color: var(--color-text);
+            margin-bottom: 6px;
         }
 
         .login-subtitle {
             font-size: 14px;
-            color: #666;
+            color: var(--color-text-muted);
         }
 
         .form-group {
@@ -62,7 +100,7 @@
             display: block;
             font-size: 14px;
             font-weight: 500;
-            color: #333;
+            color: var(--color-text);
             margin-bottom: 8px;
         }
 
@@ -73,22 +111,25 @@
 
         .form-input {
             flex: 1;
-            padding: 14px 50px 14px 16px;
-            border: 2px solid #e0e0e0;
-            border-radius: 12px;
+            padding: 14px 48px 14px 16px;
+            border: 1.5px solid var(--color-border);
+            border-radius: var(--radius-md);
             font-size: 16px;
-            transition: border-color 0.2s, box-shadow 0.2s;
+            font-family: inherit;
+            transition: border-color var(--transition-fast), box-shadow var(--transition-fast);
             outline: none;
+            background: var(--color-bg-white);
         }
 
         .form-input:focus {
-            border-color: #07c160;
-            box-shadow: 0 0 0 3px rgba(7, 193, 96, 0.1);
+            border-color: var(--color-primary);
+            box-shadow: 0 0 0 3px var(--color-primary-light);
         }
 
         .form-input:disabled {
-            background: #f5f5f5;
+            background: var(--color-bg-card);
             cursor: not-allowed;
+            opacity: 0.7;
         }
 
         .password-toggle {
@@ -98,26 +139,34 @@
             transform: translateY(-50%);
             background: none;
             border: none;
-            font-size: 20px;
+            font-size: 18px;
             cursor: pointer;
             padding: 4px;
+            color: var(--color-text-muted);
+            border-radius: 4px;
+            transition: color var(--transition-fast);
+        }
+
+        .password-toggle:hover {
+            color: var(--color-text-secondary);
         }
 
         .login-button {
             width: 100%;
-            padding: 16px;
-            background: #07c160;
-            color: white;
+            padding: 14px;
+            background: var(--color-primary);
+            color: #fff;
             border: none;
-            border-radius: 12px;
+            border-radius: var(--radius-md);
             font-size: 16px;
             font-weight: 600;
+            font-family: inherit;
             cursor: pointer;
-            transition: background 0.2s, transform 0.1s;
+            transition: background var(--transition-fast), transform 0.1s ease;
         }
 
         .login-button:hover {
-            background: #06ad56;
+            background: var(--color-primary-hover);
         }
 
         .login-button:active {
@@ -133,6 +182,7 @@
         .login-button.loading {
             position: relative;
             color: transparent;
+            pointer-events: none;
         }
 
         .login-button.loading::after {
@@ -143,7 +193,7 @@
             width: 20px;
             height: 20px;
             margin: -10px 0 0 -10px;
-            border: 2px solid white;
+            border: 2px solid #fff;
             border-top-color: transparent;
             border-radius: 50%;
             animation: spin 0.8s linear infinite;
@@ -159,34 +209,43 @@
             margin-bottom: 16px;
             font-size: 14px;
             display: none;
+            animation: fadeIn 0.2s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-4px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         #errorMessage {
             background: #fff2f0;
             border: 1px solid #ffccc7;
-            color: #ff4d4f;
+            color: var(--color-danger);
         }
 
         #warningMessage {
             background: #fffbe6;
             border: 1px solid #ffe58f;
-            color: #faad14;
+            color: var(--color-warning);
         }
 
         .footer {
             text-align: center;
             margin-top: 24px;
             font-size: 12px;
-            color: #999;
+            color: var(--color-text-muted);
         }
 
         @media (max-width: 480px) {
             .login-container {
                 padding: 32px 24px;
+                border-radius: 16px;
             }
 
             .login-icon {
-                font-size: 48px;
+                width: 52px;
+                height: 52px;
+                font-size: 26px;
             }
 
             .login-title {
@@ -196,16 +255,16 @@
     </style>
 </head>
 <body>
-    <div class="login-container">
+    <div class="login-container" role="main">
         <div class="login-header">
-            <div class="login-icon">📁</div>
+            <div class="login-icon" aria-hidden="true">📁</div>
             <h1 class="login-title">文件传输助手</h1>
             <p class="login-subtitle">请输入访问密码</p>
         </div>
 
-        <form id="loginForm">
-            <div id="errorMessage" class="message"></div>
-            <div id="warningMessage" class="message"></div>
+        <form id="loginForm" aria-label="登录表单">
+            <div id="errorMessage" class="message" role="alert"></div>
+            <div id="warningMessage" class="message" role="alert"></div>
 
             <div class="form-group">
                 <label class="form-label" for="passwordInput">访问密码</label>
@@ -216,8 +275,9 @@
                         class="form-input"
                         placeholder="请输入密码"
                         autocomplete="current-password"
+                        required
                     >
-                    <button type="button" id="passwordToggle" class="password-toggle">👁️</button>
+                    <button type="button" id="passwordToggle" class="password-toggle" aria-label="切换密码可见性">👁️</button>
                 </div>
             </div>
 
